[package]
name = "bevy_raylib2"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["4yman-0"]
description = "A Raylib plugin for Bevy"
homepage = "https://crates.io/crates/bevy_raylib2"
repository = "https://github.com/4yman-0/bevy_raylib2"
documentation = "https://docs.rs/bevy_raylib2"
readme = "README.md"

[dependencies]
bevy_app = "0.17.2"
bevy_ecs = "0.17.2"
bevy_utils = "0.17.2"
raylib = "5.5.1"

[features]
default = []
