[package]
name = "bevy_raylib2"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["4yman-0"]
description = "A Raylib plugin for Bevy"
homepage = "https://crates.io/crates/bevy_raylib2"
repository = "https://github.com/4yman-0/bevy_raylib2"
documentation = "https://docs.rs/bevy_raylib2"
readme = "README.md"

[dependencies]
bevy_app = { version = "0.18.0", default-features = false }
bevy_ecs = { version = "0.18.0", default-features = false }
bevy_utils = { version = "0.18.0", default-features = false }
raylib = { version = "5.5.1", default-features = false }

[features]
default = [ "bindgen" ]
bindgen = [ "raylib/bindgen" ]
